# dbt-CICD

./: .gitignore  .user.yml  README.md  cosmos_config.py  dbt_project.yml  dev.env  profiles.yml  pyproject.toml
.github/workflows/: debug_connections.yml  dev.yml  main.yml  prod.yml
models/: sources.yml
models/acme/: acme_locations.sql  acme_products.sql  locations.sql
models/swm/: swm_billing_transactions.sql  swm_raw_cash_transactions.sql
