[project]
name = "sunday-dbt-workshop"
version = "0.1.0"
description = "dbt Core project for BigQuery"
authors = [
    { name = "praise", email = "praise@one-five.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "dbt-core = ^1.10.0",
    "dbt-bigquery = ^1.10.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
