[project]
name = "my-dbt-project"
version = "0.1.0"
description = ""
authors = [
    {name = "praise",email = "praise@one-five.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbt-core (>=1.10.15,<2.0.0)",
    "dbt-bigquery (>=1.10.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
